# mercury-agent-wallet

./: .cursorignore  .env.example  .gitignore  README.md  curls.txt  langgraph.json  pyproject.toml
.cursor/plans/: graph_node_logging_05a32f97.plan.md  mercury_phase_10_pan_agentikit_58d1826f.plan.md  mercury_phase_11_test_hardening_d3e8d6e6.plan.md  mercury_phase_1_foundation_5f07ca97.plan.md  mercury_phase_2_custody_registry_52034504.plan.md  mercury_phase_3_readonly_tools_7f3e9cf7.plan.md  mercury_phase_4_langgraph_readonly_f135af0d.plan.md  (+7 more)
docs/: MERCURY_SPECIALIST_REMOTE_AGENT_PROMPT.md
docs/graphs/: mercury_erc20.mmd  (+3 more)
mercury/: __init__.py  config.py
scripts/: export_mercury_graph_mermaid.py
tests/: conftest.py  test_chain_registry.py  test_config.py  test_cowswap_adapter.py  test_erc20_amounts.py  test_erc20_policy.py  test_erc20_read_tools.py  test_erc20_transaction_builders.py  test_evm_read_tools.py  test_graph_erc20_routes.py  test_graph_native_routes.py  test_graph_readonly_execution.py  test_graph_readonly_routes.py  test_graph_runtime_logging.py  test_graph_smoke.py  test_graph_swap_routes.py  test_http_logging_middleware.py  test_idempotency.py  test_invoke_intent_validation.py  test_known_addresses.py  test_lifi_adapter.py  test_lifi_quote_fixtures.py  test_native_policy.py  test_native_transactions.py  test_oneclaw_custody.py  test_pan_agentikit_adapter.py  test_policy_engine.py  test_request_metadata_approver.py  test_rpc_resolution.py  test_secret_redaction.py  test_service_errors.py  test_service_health.py  test_service_invoke.py  test_service_pan_agentikit_route.py  test_signer_boundary.py  test_swap_allowance.py  test_swap_models.py  test_swap_policy.py  test_transaction_pipeline.py  test_uniswap_adapter.py  (+3 more)
(+92 files in other folders)
