[project]
name = "mercury"
version = "0.1.0"
description = "Mercury wallet agent foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain-core",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["mercury", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mercury"]
