[project]
name = "mercury"
version = "0.1.0"
description = "Mercury wallet agent foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "typing-extensions",
    "uvicorn>=0.46.0",
    "web3>=7.15.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: optional integration tests disabled unless explicitly configured",
    "live_rpc: tests that may call live read-only RPC endpoints",
    "requires_oneclaw: tests that require 1Claw credentials",
]

[tool.ruff]
line-length = 100
src = ["mercury", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
per-file-ignores = {"scripts/**/*.py" = ["E402"]}

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mercury"]
